# S4Bdashboard

./: .gitignore  CHANGELOG.md  MaestroAI_Auditoria_Esquemas_Finanzas.docx  README.md  eslint.config.js  index.html  package-lock.json  package.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements-mcp.txt  requirements.txt
apps/api/app/: __init__.py  actions.py  alerts.py  auth.py  branding.py  company_profile.py  config.py  db.py  diagnostics.py  doc_categories.py  finetune.py  flowcharts.py  ingest.py  mailsummary.py  main.py  mfa.py  models.py  permissions.py  report_templates.py  runtime_config.py  scheduler.py  schemas.py  seed.py
apps/api/app/ai/: __init__.py  adapters.py  (+13 more)
apps/api/migrations/: README.md  env.py
apps/api/scripts/: qa_e2e.py
apps/api/tests/: test_actions.py  test_actions_exec.py  test_agent_planner.py  test_alerts.py  test_antivirus.py  test_api_flow.py  test_audit.py  test_automations.py  test_billing.py  test_branding.py  test_cascade.py  test_chat_history.py  test_condense.py  test_crypto.py  test_dashboards.py  test_datasources.py  test_documents.py  test_efficiency.py  test_embeddings_nan.py  test_exports.py  test_fallback.py  test_finance.py  test_finetune.py  test_flowcharts.py  test_hardening.py  test_images.py  test_ingest.py  test_integration_api.py  test_kedb.py  test_latam.py  test_mail_digest.py  test_memory.py  test_mfa.py  test_migrations.py  test_n8n.py  test_n8n_recipes.py  test_notebooks.py  test_odata.py  test_operations.py  test_permissions.py  (+24 more)
(+241 files in other folders)
