[project]
name = "private-ai-platform-api"
version = "0.1.0"
description = "MaestroAI — Private AI Gateway + Vertical Agents (backend API, FastAPI)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["migrations/versions"]  # migraciones autogeneradas

[tool.ruff.lint]
# Errores reales de Python (pyflakes) + imports ordenados. Ignoramos el estilo
# compacto de una línea (a; b) que el proyecto usa a propósito.
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E702", "E741", "E731"]
